popularity-contest (1.27) UNRELEASED; urgency=low

  * Translations
    - Corrections in Ukrainian uk.po. Closes: #290752
  * popcon-stat.pl, popcon-process.sh: Change the interface to avoid
    use of xargs which has a length limit.

 -- Bill Allombert <ballombe@debian.org>  Tue, 15 Feb 2005 15:44:35 +0100

popularity-contest (1.26) unstable; urgency=low

  * popcon.pl: Accomodate with kfreebsd-gnu new URL.
             + Add popcon release stats.
  * popcon-stat.pl: Unclutter the graph.
                  + Generate the popcon release graph.  
  * FAQ: Document how to not send popcon email by root. Closes: #264593
         Thanks Martin Dickopp.
       + Document when popularity-contest run and recommends anacron.
         Thanks Martin Rasp.
  * debian/control: Suggests: anacron.
  * Remove regexp to catch .pyc files since there are not in packages.
    Closes: #265360. Thanks Martin v. Loewis.

 -- Bill Allombert <ballombe@debian.org>  Fri, 29 Oct 2004 10:20:28 +0200

popularity-contest (1.25) unstable; urgency=low

  * Petter Reinholdtsen
    - Removed Avery Pennarun as uploader on request from
      Jeroen van Wolffelaar (QA).
  * Translations
    - Initial Bulgarian debconf translation bg.po. Closes: #267586
    - Turkish updated. Closes: #267836
    - Update German debconf translation de.po
    - Russian updated. Closes: #268403
    - Norwegian Bokmal and Nynorsk updated : nb.po and nn.po. Closes: #269908
    - Korean translation updated ko.po

 -- Petter Reinholdtsen <pere@debian.org>  Tue,  7 Sep 2004 08:45:49 +0200

popularity-contest (1.24) unstable; urgency=low

  * Petter Reinholdtsen
    - Let postinst and popcon-process.sh use /bin/sh, and make sure
      the notation in postinst is POSIX compatible.  Patch from David
      Weinehall.  (Closes: #260088)
    - Change type of popularity-contest/hostid-failed template from
      'error' to 'note'.  The former is only available in cdebconf.
      (Closes: #262426)
  * Translations