@@ -83,7 +83,7 @@ EOF
 Made by <a href="mailto:ballombe\@debian.org"> Bill Allombert </a>. Last generated on $date UTC. <br>
 <a href="http://popcon.alioth.debian.org" > Popularity-contest project <a> by Avery Pennarun, Bill Allombert and Petter Reinholdtsen.
 <BR>
-Copyright (C) 2004 <A HREF="http://www.spi-inc.org/">SPI</A>;
+Copyright (C) 2004-2005 <A HREF="http://www.spi-inc.org/">SPI</A>;
 See <A HREF="http://www.debian.org/license">license terms</A>.
 </small>
 </body>
@@ -103,32 +103,31 @@ sub print_by
    print HTML ("<a href=\"$dir/by_$f\">$f</a> [<a href=\"$dir/by_$f.gz\">gz</a>] ");
 }
 
-sub make_by
-{
-  my ($sec,$order,$pkg,@list) = @_;
-  my %sum;
-  @list = sort {$pkg->{$b}->{$order}<=> $pkg->{$a}->{$order} || $a cmp $b } @list;
-  $winner{"$sec/$order"}=$list[0];
-  open DAT , "| tee $popcon/$sec/by_$order | gzip -c > $popcon/$sec/by_$order.gz";
-  if ($sec eq "maint")
-  {
-    print DAT <<"EOF";
-#Format
-#   
+%list_header=(
+"maint" => <<"EOF",
 #<name> is the developer name;
 #
 #The fields below are the sum for all the packages maintained by that
 #developer:
-#
-#<inst> is the number of people who installed this package;
-#<vote> is the number of people who use this package regularly;
-#<old> is the number of people who installed, but don't use this package
-#      regularly;
-#<recent> is the number of people who upgraded this package recently;
-#<no-files> is the number of people whose entry didn't contain enough
-#           information (atime and ctime were 0).
-#rank name                            inst  vote   old recent no-files
 EOF
+"source" => <<"EOF");
+#<name> is the source package name;
+#
+#The fields below are the sum for all the binary packages generated by
+#that source package:
+EOF
+
+sub make_by
+{
+  my ($sec,$order,$pkg,@list) = @_;
+  my (%sum, $me);
+  @list = sort {$pkg->{$b}->{$order}<=> $pkg->{$a}->{$order} || $a cmp $b } @list;
+  $winner{"$sec/$order"}=$list[0];
+  open DAT , "| tee $popcon/$sec/by_$order | gzip -c > $popcon/$sec/by_$order.gz";
+  if (defined($list_header{$sec}))
+  {
+    print DAT $list_header{$sec};
+    $me="";
   }
   else 
   {
@@ -136,22 +135,25 @@ EOF
 #Format
 #   
 #<name> is the package name;
+EOF
+    $me="(maintainer)";
+  }
+  print DAT << "EOF";
 #<inst> is the number of people who installed this package;
 #<vote> is the number of people who use this package regularly;
 #<old> is the number of people who installed, but don't use this package
-#        regularly;
+#      regularly;
 #<recent> is the number of people who upgraded this package recently;
 #<no-files> is the number of people whose entry didn't contain enough
-#        information (atime and ctime were 0).
-#rank name                            inst  vote   old recent no-files (maintainer)
+#           information (atime and ctime were 0).
+#rank name                            inst  vote   old recent no-files $me
 EOF
-  }
   $format="%-5d %-30s".(" %5d"x($#fields+1))." %-32s\n";
   my $rank=0;
   for $p (@list)
   {
     $rank++;
-    my $m=($sec eq "maint"?"":"($maint{$p})");
+    my $m=(defined($list_header{$sec})?"":"($maint{$p})");
     printf  DAT $format, $rank, $p, (map {$pkg->{$p}->{$_}} @fields), $m;
     $sum{$_}+=$pkg->{$p}->{$_} for (@fields);
   }
@@ -174,8 +176,10 @@ sub print_pkg
 %pkg=();
 %section=();
 %maint=();
+%source=();
 %winner=();
 %maintpkg=();
+%sourcepkg=();
 @fields=("inst","vote","old","recent","no-files");
 
 for $file ("slink","slink-nonUS","potato","potato-nonUS","woody","woody-nonUS")
@@ -189,6 +193,7 @@ for $file ("slink","slink-nonUS","potato","potato-nonUS","woody","woody-nonUS")
 	  $sec =~ m{^(non-US|contrib|non-free)/} or $sec="main/$sec";
 	  $section{$p}=$sec;
 	  $maint{$p}="Not in sid";
+	  $source{$p}="Not in sid";
   }
   close AVAIL;
 }
@@ -199,9 +204,10 @@ for $file (glob("/org/ftp.root/debian/dists/testing/*/binary-*/Packages"),glob("
   open AVAIL, "$file";
   while(<AVAIL>)
   {
-/Package: (.+)/  and do {$p=$1;$maint{$p}="bug";next;};
-/Maintainer: ([^()]+) (\(.+\) )*<.+>/ and do { $maint{$p}=join(' ',map{ucfirst($_)} split(' ',lc $1));next;};
-/Section: (.+)/ or next;
+/^Package: (.+)/  and do {$p=$1;$maint{$p}="bug";$source{$p}=$p;next;};
+/^Maintainer: ([^()]+) (\(.+\) )*<.+>/ and do { $maint{$p}=join(' ',map{ucfirst($_)} split(' ',lc $1));next;};
+/^Source: (\S+)/ and do { $source{$p}=$1;next;};
+/^Section: (.+)/ or next;
           $sec=$1;
           $sec =~ m{^(non-US|contrib|non-free)/} or $sec="main/$sec";
           $section{$p}=$sec;
@@ -220,7 +226,6 @@ $ENV{PATH}="/bin:/usr/bin";
 #<recent> is the number of people who upgraded this package recently;
 #<no-files> is the number of people whose entry didn't contain enough
 #        information (atime and ctime were 0).
-
 open PKG, "$results";
 while(<PKG>)
 {
@@ -232,11 +237,13 @@ while(<PKG>)
 	  unshift @votes,$votes[0]+$votes[1]+$votes[2]+$votes[3];
 	  $section{$name}='unknown' unless (defined($section{$name}));
 	  $maint{$name}='Not in sid' unless (defined($maint{$name}));
+	  $source{$name}='Not in sid' unless (defined($source{$name}));
 	  for(my $i=0;$i<=$#fields;$i++)
 	  {
 		  my ($f,$v)=($fields[$i],$votes[$i]);
 		  $pkg{$name}->{$f}=$v;
 		  $maintpkg{$maint{$name}}->{$f}+=$v;
+		  $sourcepkg{$source{$name}}->{$f}+=$v;
 	  }
   }
   elsif ($type eq "Architecture:")
@@ -259,6 +266,7 @@ while(<PKG>)
 %sections = map {$section{$_} => 1} keys %section;
 @sections = sort keys %sections;
 @maints= sort keys %maintpkg;
+@sources= sort keys %sourcepkg;
 
 for $sec (@sections)
 {
@@ -278,6 +286,8 @@ for $sec (".",@dists)
 }
 make_sec "maint";
 make_by ("maint", $_, \%maintpkg, @maints) for (@fields);
+make_sec "source";
+make_by ("source", $_, \%sourcepkg, @sources) for (@fields);
 for $sec (@dists)
 {
   open HTML , "> $popcon/$sec/index.html";
@@ -345,6 +355,9 @@ for $sec (@dists)
 	print HTML ("</pre>\n </p> \n");
 	printf HTML ("<p>Statistics by maintainers sorted by fields: <pre>",$sec);
 	print_by ("maint",$_) for (@fields);
+	print HTML ("</pre>\n </p> \n");
+	printf HTML ("<p>Statistics by source packages sorted by fields: <pre>",$sec);
+	print_by ("source",$_) for (@fields);
 	print HTML ("</pre>\n </p> \n");
 	printf HTML ("<p>Statistics for sections sorted by fields\n <pre>\n");
   	for $dir ("main","contrib","non-free","non-US","unknown")
